# citra

./: CMakeLists.txt
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt
src/citra/: citra.rc
src/citra_qt/: CMakeLists.txt  citra-qt.rc  main.cpp  main.h  main.ui
src/citra_qt/configuration/: configure_system.cpp
src/common/: microprofile.h
src/core/: CMakeLists.txt  core.cpp  memory.h
src/core/hle/applets/: swkbd.cpp
src/core/hle/service/hid/: hid.cpp
src/video_core/: CMakeLists.txt
src/video_core/shader/: shader_jit_x64.cpp
